Sun Nov 16 18:13:26 2003  Stefan Westerfeld  <stefan@space.twc.de>

	* Makefile.am: Added evaluator as subdirectory.

Sun Nov 16 18:03:48 2003  Stefan Westerfeld  <stefan@space.twc.de>

	* evaluator/*: Added BseEvaluator, a module based on a small,
	interpreted programming language which can compute expressions
	like "output = input * 0.5 + 1".
  
Sat Oct 25 01:49:50 2003  Tim Janik  <timj@gtk.org>

        * *.*: changed "copyright" field of procedures, scripts and objects
        into a "license" field which better reflects what we're asking for.

Fri Oct 24 21:26:22 2003  Tim Janik  <timj@gtk.org>

	* artscompressor.cc: 
	* artscompressor.idl: fix indentation and copyright notice.

Wed Oct 22 19:47:58 2003  Stefan Westerfeld  <stefan@space.twc.de>

	* davxtalstrings.c: Fixed bug in triggering code inside inner loop.

Sat Oct 18 04:48:34 2003  Stefan Westerfeld  <stefan@space.twc.de>

	* artscompressor.idl artscompressor.cc: Ported compressor from aRts.
	Stereo compression is also supported, and works slightly differently
	than in aRts because it uses only one volume for both channels, and
	like this doesn't mess up balance.

	* Makefile.am Makefile.plugins: Added compressor to the Makefiles.

Tue Oct  7 15:05:22 2003  Tim Janik  <timj@gtk.org>

	* icons/balance.*: colorized icon.

	* davsyndrum.c (dmod_process): 
	* davxtalstrings.c (xmod_process): fix trigger edge detection,
	reported by stefan westerfeld.

Sun Oct  5 08:12:51 2003  Tim Janik  <timj@gtk.org>

	* icons/balance.xcf:
	* icons/balance.png:
	* bsebalance.idl: 
	* bsebalance.cc: new stereo balance/panorama position module.

Sun Sep 21 15:18:00 2003  Tim Janik  <timj@gtk.org>

	* listplugins.sh:
	* Makefile.am: added support for C++ plugins with header
	generation from idl files via bse-plugin-generator.

	* davchorus.cc:
	* davchorus.idl: ported DavChorus to C++.

	* davchorus.[hc]: removed unported C implementation.

Thu Sep  4 15:13:55 2003  Tim Janik  <timj@gtk.org>
