@@ -1,3 +1,14 @@
+Sun Nov 16 22:40:58 2003  Stefan Westerfeld  <stefan@space.twc.de>
+
+	* evaluator/compiler.*: Support for parenthesis, and sin(x).
+	* evaluator/instruction.*: New Instruction::SIN instruction.
+	* evaluator/token.h: Parenthesis.
+
+	* evaluator/*: Put implementation in the Bse::EvaluatorUtils
+	namespace.
+
+	* evaluator/evaluateexpr.cc: Error handling.
+
 Sun Nov 16 18:13:26 2003  Stefan Westerfeld  <stefan@space.twc.de>
 
 	* Makefile.am: Added evaluator as subdirectory.
